<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_h_margin"
        android:gravity="center_horizontal"
        android:text="@string/current_balance"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_current_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_h_margin"
        android:layout_marginTop="@dimen/home_tv_current_balance_margin_top"
        android:layout_marginBottom="@dimen/home_tv_current_balance_margin_top"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:textColor="@color/gold"
        android:textSize="@dimen/text_size_32"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_amount"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="@dimen/layout_h_margin"
        android:hint="@string/hint_enter_amount"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/transaction_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_fields_middle_margin"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_deposit"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/layout_h_margin"
            android:layout_marginTop="@dimen/layout_fields_middle_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/deposit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_withdraw"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/layout_fields_middle_margin"
            android:layout_marginEnd="@dimen/layout_h_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/withdraw"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</LinearLayout>
